--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row-fluid">
             <div class="span10 offset1">
                 <h1 class="well" >
-                    <a href="default.htm">
+                    <a href="index.html">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
                     Farm2Kitchen
