--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="row-fluid">
             <div class="span10 offset1">
                 <h1 class="well" >
-                    <a href="index.html">
+                    <a href="index.html"><body style="background-color:#FF0000;">
+</body>
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
                     Farm2Kitchen
