--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
-  <body>
+  <body style="background-color:#FF0000;">
 
   
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span10 offset1">
                 <h1 class="well" >
-                    <a href="index.html"><body style="background-color:#FF0000;">
-</body>
+                    <a href="index.html">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
                     Farm2Kitchen
