--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
-  <body style="background-color:grey;">
+  <body style="background-color:#808080;">
 
   
     <div class="container-fluid">
