--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
 
-  <body style="background-color:#C0C0C0;">
-
+ <div style="background-image: url('https://images.unsplash.com/photo-1572527129705-a6c197003d61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
+;background-repeat:no-repeat;background-size:1500px,3000px;">
   
     <div class="container-fluid">
         <div class="row-fluid">
