--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="js/controller.js" type="text/javascript"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body text="white"></body>
+  <body style= "font-color:'white' "></body>
  <div style="background-image: url('https://images.unsplash.com/photo-1572527129705-a6c197003d61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
 ;background-repeat:no-repeat;background-size:1500px,3000px;">
   
