--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body style= "font-color:'white' "></body>
- <div style="background-image:('https://images.unsplash.com/photo-1521913626209-0fbf68f4c4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
+ <div style="background-image:url('https://images.unsplash.com/photo-1521913626209-0fbf68f4c4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
 ;background-repeat:no-repeat;background-size:1500px,3000px;">
   
     <div class="container-fluid">
