--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span10 offset1">
-                <h1 class="well" >
+                <h1 class="well" <body style="background-color:#1c87c9;">
+    <h1>Farm2Kitchen</h1>
+   >
                     <a href="index.html">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
