--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body style= "font-color:'white' "></body>
- <div style="background-image:url('https://images.unsplash.com/photo-1521913626209-0fbf68f4c4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
-;background-repeat:no-repeat;background-size:1500px,3000px;">
+ <div style="background-image:url('https://images.unsplash.com/photo-1467825683276-01f37b99c328?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
+;background-repeat:no-repeat;background-size:2000px,3000px;">
   
-    <div class="container-fluid">
+  <div class="container-fluid">
         <div class="row-fluid">
             <div class="span10 offset1">
-                <h1 class="well"
-   >
-                    <a href="index.html">
+                <h1 class="well" >
+                    <a href="default.htm">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
-                    Farm2Kitchen
+                    FarmToKitchen
                 </h1>
                 <div ng-view></div>
             </div>
