--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body style= "font-color:'white' "></body>
  <div style="background-image:url('https://images.unsplash.com/photo-1535227798054-e4373ef3795a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
-;background-repeat:no-repeat;background-size:2000px,3000px;">
+;background-repeat:no-repeat;background-size:2000px,3000px;"font-color:'white'">
   
   <div class="container-fluid">
         <div class="row-fluid">
