--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="default.htm">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
                     </a>
-                    FarmToKitchen
+                                                                                 <p style="font-size:30px">FarmToKitchen</p>
                 </h1>
                 <div ng-view></div>
             </div>
