--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h1 class="well" >
                     <a href="default.htm">
                         <img src="img/logo.png" height="60" width="60" alt="logo"/>
-                    </a>
-                   <p style="font-size:500px">FarmToKitchen</p>
+                   
+                   <p style="font-size:300px">FarmToKitchen</p> </a>
                 </h1>
                 <div ng-view></div>
             </div>
