--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h1 class="well" >
                     <a href="default.htm">
                         <img src="img/logo.png" height="90" width="90" alt="logo"/>
-                   
-                   <p style="font-size:20px">FarmToKitchen</p> </a>
+                   </a>
+                   <p style="font-size:50px">FarmToKitchen</p> 
                 </h1>
                 <div ng-view></div>
             </div>
