--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-  </body>
-                                                 <script>
+  
+                                            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>     <script>
     var text = '{"products":['+
    '{
       "name": "Apples",
@@ -80,4 +80,5 @@
                           <ul id ="product4"></ul>
                           <ul id ="product5"></ul>
                         </div>
+</body>
 </html>
