--- a/index.html
+++ b/index.html
@@ -40,29 +40,30 @@
             </div>
         </div>
     </div>
+    <section id="video" class="content-section">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-heading">
+                            <h1>Our<em>Best Selling Products</em>!!!</h1><br>
 
-  
-                                            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>     <script>
-    var text = '{"products":['+
-   '{
-      "name": "Apples",
-      "id": "1",
-      "price": "100/kg"},'+
-   '{"name": "Orange",
-      "id": "2",
-      "price": "50/kg"},'+
-   '{ "name": "Grapes",
-      "id": "3",
-      "price": "80/kg"},'+
-   '{"name": "Onion",
-      "id": "4",
-      "price": "45/kg"},'+
-   '{ "name": "Tomato",
-      "id": "5",
-      "price": "13/kg"}]}';
+                        </div>
+                        <div>
+                          <h3>Places and their prices</h3>
+                          <ul id ="place1"></ul>
+                          <ul id ="place2"></ul>
+                          <ul id ="place3"></ul>
+                          <ul id ="place4"></ul>
+                          <ul id ="place5"></ul>
+                        </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>  
+<script>
+    var text = '{"product":['+
+   '{ "name": "Apples", "id": "1","price": "100/kg"},'+
+   '{"name": "Orange","id": "2","price": "50/kg"},'+
+   '{ "name": "Grapes","id": "3","price": "80/kg"},'+
+   '{"name": "Onion", "id": "4", "price": "45/kg"},'+
+   '{ "name": "Tomato", "id": "5","price": "13/kg"}]}';
 
- 
-]
 
   var obj = JSON.parse(text);
    document.getElementById("product1").innerHTML =  "<li>" + obj.product[0].name + " - " +  obj.product[0].price + "</li>" ;
@@ -72,13 +73,6 @@
        document.getElementById("product5").innerHTML =  "<li>" + obj.product[4].name + " - " +  obj.product[4].price + "</li>" ;
 
 </script>
-<div>
-                          <h3>Products and their prices</h3>
-                          <ul id ="product1"></ul>
-                          <ul id ="product2"></ul>
-                          <ul id ="product3"></ul>
-                          <ul id ="product4"></ul>
-                          <ul id ="product5"></ul>
-                        </div>
+
 </body>
 </html>
