--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h1>Our<em>Best Selling Products</em>!!!</h1><br>
+                                                    <Center>  <h1>OurBest Selling Products!!!</h1><br></Center>
 
                         </div>
                         <div>
-                          <h3>Places and their prices</h3>
-                          <ul id ="place1"></ul>
-                          <ul id ="place2"></ul>
-                          <ul id ="place3"></ul>
-                          <ul id ="place4"></ul>
-                          <ul id ="place5"></ul>
+                          <h3>Products and their prices</h3>
+                          <ul id ="product1"></ul>
+                          <ul id ="product2"></ul>
+                          <ul id ="product3"></ul>
+                          <ul id ="product4"></ul>
+                          <ul id ="product5"></ul>
                         </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>  
 <script>
