--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
     <script src="js/controller.js" type="text/javascript"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body style= "font-color:'white' "></body>
+  <body style= "font-color:'white' "></body><section id="video" class="content-section">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-heading">
+                                                    <Center>  <h1>OurBest Selling Products!!!</h1><br></Center>
+
+                        </div>
+                        <div><center>
+                          <h3>Products and their prices</h3>
+                          <ul id ="product1"></ul>
+                          <ul id ="product2"></ul>
+                          <ul id ="product3"></ul>
+                          <ul id ="product4"></ul>
+                                            <ul id ="product5"></ul></center>
+                        </div>
  <div style="background-image:url('https://images.unsplash.com/photo-1590920659508-1c4e4435c962?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
 ;background-repeat:no-repeat;background-size:3000px,3000px;"font-color:'white'">
   
@@ -40,21 +54,7 @@
             </div>
         </div>
     </div>
-    <section id="video" class="content-section">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-heading">
-                                                    <Center>  <h1>OurBest Selling Products!!!</h1><br></Center>
-
-                        </div>
-                        <div>
-                          <h3>Products and their prices</h3>
-                          <ul id ="product1"></ul>
-                          <ul id ="product2"></ul>
-                          <ul id ="product3"></ul>
-                          <ul id ="product4"></ul>
-                          <ul id ="product5"></ul>
-                        </div>
+    
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>  
 <script>
     var text = '{"product":['+
