--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
     <script src="js/controller.js" type="text/javascript"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body style= "font-color:'white' "></body><section id="video" class="content-section">
+  <body style= "font-color:'white' "></body>
+ <div style="background-image:url('https://images.unsplash.com/photo-1590920659508-1c4e4435c962?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
+;background-repeat:no-repeat;background-size:3000px,3000px;"font-color:'white'">
+  
+  <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span10 offset1">
+                <h1 class="well" >
+                    <a href="default.htm">
+                        <img src="img/logo.png" height="90" width="90" alt="logo"/>
+                   </a>
+                   <p style="font-size:50px">FarmToKitchen</p> 
+                </h1>
+                        <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
@@ -36,20 +49,7 @@
                           <ul id ="product3"></ul>
                           <ul id ="product4"></ul>
                                             <ul id ="product5"></ul></center>
-                        </div>
- <div style="background-image:url('https://images.unsplash.com/photo-1590920659508-1c4e4435c962?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
-;background-repeat:no-repeat;background-size:3000px,3000px;"font-color:'white'">
-  
-  <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span10 offset1">
-                <h1 class="well" >
-                    <a href="default.htm">
-                        <img src="img/logo.png" height="90" width="90" alt="logo"/>
-                   </a>
-                   <p style="font-size:50px">FarmToKitchen</p> 
-                </h1>
-                                        
+                        </div>                
                 <div ng-view></div>
             </div>
         </div>
