--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                         </div>
                         <div><center>
                           <h3>Products and their prices</h3>
-                          <ul id ="product1"></ul>
-                          <ul id ="product2"></ul>
-                          <ul id ="product3"></ul>
-                          <ul id ="product4"></ul>
-                                            <ul id ="product5"></ul></center>
+                          <p id ="product1"></p>
+                          <p id ="product2"></p>
+                          <p id ="product3"></p>
+                          <p id ="product4"></p>
+                                            <p id ="product5"></p></center>
                         </div>                
                 <div ng-view></div>
             </div>
