--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                                                    <Center>  <h1>OurBest Selling Products!!!</h1><br></Center>
+                                                    <Center>  <h1>Our Best Selling Products!!!</h1><br></Center>
 
                         </div>
                         <div><center>
-                          <h3>Products and their prices</h3>
+                          <h3 style="color:white" Products and their prices /h3>  
                           <p id ="product1"></p>
                           <p id ="product2"></p>
                           <p id ="product3"></p>
