--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                         </div>
                         <div><center>
-                          <h3 style="color:white" Products and their prices /h3>  
+                          <h3 style="color:white"> Products and their prices </h3>  
                           <p id ="product1"></p>
                           <p id ="product2"></p>
                           <p id ="product3"></p>
