--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                                                    <Center>  <h1 style="color:white>Our Best Selling Products!!!</h1><br></Center>
+                                                    <Center>  <h1>Our Best Selling Products!!!</h1><br></Center>
 
                         </div>
                         <div><center>
