--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                    </a>
                    <p style="font-size:50px">FarmToKitchen</p> 
                 </h1>
+                                            ﻿<p class="text-info">
+   <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
+<b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></br>
+</p>
                         <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
