--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </h1>
                                             ﻿<p class="text-info">
    <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
-<b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></br>
+<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center></br>
 </p>
                         <section id="video" class="content-section">
                 <div class="row">
