--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <body style= "font-color:'white' "></body>
  <div style="background-image:url('https://images.unsplash.com/photo-1590920659508-1c4e4435c962?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
 ;background-repeat:no-repeat;background-size:3000px,3000px;"font-color:'white'">
-  
   <div class="container-fluid">
         <div class="row-fluid">
             <div class="span10 offset1">
@@ -30,14 +29,13 @@
                 </h1>
                                             ﻿<p class="text-info">
    <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
-<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center></br>
+<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center>
 </p>
                         <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
                                                     <Center>  <h1>Our Best Selling Products!!!</h1><br></Center>
-
                         </div>
                         <div><center>
                           <h3> Products and their prices </h3>  
