--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                    <p style="font-size:50px">FarmToKitchen</p> 
                 </h1>
                                             ﻿<p class="text-info">
-   <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
+   <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></marquee>
 <center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center>
 </p>
                         <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                                                    <Center>  <h1>Our Best Selling Products!!!</h1><br></Center>
+                                                    <Center>  <h1>Our Best Selling Products!!!</h1></Center>
                         </div>
                         <div><center>
                           <h3> Products and their prices </h3>  
