--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
                     <a href="default.htm">
                         <img src="img/logo.png" height="90" width="90" alt="logo"/>
                    </a>
-                   <p style="font-size:50px">FarmToKitchen</p> 
-                </h1>
-                                            ﻿<p class="text-info">
-   <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></marquee>
-<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center>
-</p>
+                   <p style="font-size:50px">FarmToKitchen</p>   
+                              <marquee><b><h1 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></marquee>
+<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center></h1>
+              
+                                            
                         <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
