--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                    </a>
                    <p style="font-size:50px">FarmToKitchen</p>   
                               <marquee><b><h3 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></marquee>
-<center><b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></center></h3>
+<center><b><h2>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</h2></b></center></h3>
               
                                             
                         <section id="video" class="content-section">
