--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <h1 class="well" >
                     <a href="default.htm">
                         <img src="img/logo.png" height="90" width="90" alt="logo"/>
-                   </a>
+                   </a><div>
                    <p style="font-size:50px">FarmToKitchen</p>   
                               <marquee><b><h3 style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></marquee>
-<center><b><h5>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</h5></b></center></h3>                 
+<center><b><h5>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</h5></b></center></h3></div>                 
                         <section id="video" class="content-section">
                 <div class="row">
                     <div class="col-md-12">
